Pievienots papildu css

--- a/templates/login.html
+++ b/templates/login.html
@@ -11,8 +11,23 @@
 		}
 
 		h2 {
-			color: #448AFF;
+			color: #000080
 		}
+    body {
+      background-color: #87CEEB;
+    }
+    ul {
+      list-style-type: none;
+      padding: 0;
+      border: 1px solid #ddd
+    }
+    ul li {
+      padding: 8px 16px;
+      border-bottom: 1px solid #ddd
+    }
+    ul li:last-child {
+      border-bottom: none
+    }
 	</style>
 </head>
 
