--- a/templates/add doctor.html
+++ b/templates/add doctor.html
@@ -3,6 +3,23 @@
 
 <head>
 	<title>Admin tools - WhirlAid</title>
+  <style>
+    body {
+      background-color: #87CEEB;
+    }
+    ul {
+      list-style-type: none;
+      padding: 0;
+      border: 1px solid #ddd
+    }
+    ul li {
+      padding: 8px 16px;
+      border-bottom: 1px solid #ddd
+    }
+    ul li:last-child {
+      border-bottom: none
+    }
+  </style>
 </head>
 
 <body>
