--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,23 @@
 	<title>WhirlAid</title>
 	<style>
 		h2 {
-			color: #448AFF
+			color: #000080
 		}
+    body {
+      background-color: #87CEEB;
+    }
+    ul {
+      list-style-type: none;
+      padding: 0;
+      border: 1px solid #ddd
+    }
+    ul li {
+      padding: 8px 16px;
+      border-bottom: 1px solid #ddd
+    }
+    ul li:last-child {
+      border-bottom: none
+    }
 	</style>
 </head>
 
