pievienoti papildu teksta lauki

--- a/templates/add doctor.html
+++ b/templates/add doctor.html
@@ -31,7 +31,9 @@
 	</nav>
 	<h2>Add doctor</h4>
 		<form>
-			<input type="text" id="doctor" name="doctor"><br></br>
+			<input type="text" id="speciality" name="speciality" placeholder="Speciality:"><br></br>
+      <input type="text" id="name/surname" name="name/surname" placeholder="Name/Surname:"><br></br>
+      <input type="text" id="working_time" name="working_time" placeholder="Working time:"><br></br>
         <button type="button">Add</button>
       </form
       
