--- a/templates/add hospital.html
+++ b/templates/add hospital.html
@@ -19,6 +19,7 @@
     ul li:last-child {
       border-bottom: none
     }
+
   </style>
 </head>
 
@@ -31,8 +32,14 @@
 	</nav>
 	<h2>Add hospital</h4>
 		<form>
-			<input type="text" id="hospital" name="hospital"><br></br>
+			<input type="text" id="title" name="title" placeholder="Title:"><br></br>
+      <input type="text" id="address" name="address" placeholder="Address:"><br></br>
         <button type="button">Add</button>
       </form>
+
+      <div id="hospital">
+      </div>
+
+      <script src="JS/app.js"></script
     </body>
 </html>
